--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <header>
+      <h1>Linked List</h1>
+    </header>
+    
     <script type="text/javascript" src="script.js"/>
   </body>
 
