html for user input section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
   </head>
 
   <body>
-    this is where the body goes
+    <section id="user-input">
+      <div id="input-wrapper">
+
+        <p role="banner">
+          Linked
+          <img src="" alt="linked list logo">
+          List
+        </p>
+
+        <label for="input-website-title">
+          <input type="text" name="input-title" id="input-website-title" placeholder="Website Title">
+        </label>
+
+        <label for="input-website-url">
+          <input type="url" name="input-url" id="input-website=-url" placeholder="Website URL">
+        </label>
+
+        <label for="input-submit-bookmark">
+          <input type="button" name="input-submit" id="input-submit-bookmark" value="Enter">
+        </label>
+
+      </div>
+    </section>
+
+    <section id="user-display">
+
+    </section>
     <script type="text/javascript" src="script.js"/>
   </body>
 
