html for user display section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
 
     <section id="user-display">
 
+      <article class="bookmark-card">
+        <h3 class="bookmark-title">Website Title</h3>
+
+        <hr class="bookmark-underline">
+
+        <a class="bookmark-link" href="#">the link</a>
+
+        <hr class="bookmark-underline">
+
+        <label for="bookmark-button-read">
+          <input type="button" name="bookmark-read" id="bookmark-button-read" value="Read">
+        </label>
+
+        <label for="bookmark-button-delete">
+          <input type="button" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
+        </label>
+      </article>
+
     </section>
     <script type="text/javascript" src="script.js"/>
   </body>
