cleaning up some styling

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <p role="banner">
           Linked
-          <img src="/Users/lauracaroselli/turing/1-mod/linked-list/linked-list-logo.svg" alt="linked list logo">
+          <img src="linked-list-logo.svg" alt="linked list logo">
           List
         </p>
 
@@ -42,25 +42,7 @@
 
         <hr class="bookmark-underline">
 
-        <a class="bookmark-link" href="#">www.thewebsiteurl.com</a>
-
-        <hr class="bookmark-underline">
-
-        <label for="bookmark-button-read">
-          <input type="button" name="bookmark-read" id="bookmark-button-read" value="Read">
-        </label>
-
-        <label for="bookmark-button-delete">
-          <input type="button" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
-        </label>
-      </article>
-
-      <article class="bookmark-card">
-        <h3 class="bookmark-title">The Website Title</h3>
-
-        <hr class="bookmark-underline">
-
-        <a class="bookmark-link" href="#">www.thewebsiteurl.com</a>
+        <a class="bookmark-link" href="#" target="_blank">www.thewebsiteurl.com</a>
 
         <hr class="bookmark-underline">
 
