defining project folders

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>Linked List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" href="styles/myStyles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
@@ -20,17 +20,11 @@
           List
         </p>
 
-        <label for="input-website-title">
-          <input type="text" name="input-title" id="input-website-title" placeholder="Website Title">
-        </label>
+        <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
 
-        <label for="input-website-url">
-          <input type="url" name="input-url" id="input-website-url" placeholder="Website URL">
-        </label>
+        <input type="url" name="input-url" id="input-website-url" placeholder="Website URL">
 
-        <label for="input-submit-bookmark">
-          <input type="button" name="input-submit" id="input-submit-bookmark" value="Enter">
-        </label>
+        <input type="button" name="input-submit" id="input-submit-bookmark" value="Enter">
 
       </div>
     </section>
@@ -46,18 +40,14 @@
 
         <hr class="bookmark-underline">
 
-        <label for="bookmark-button-read">
-          <input type="button" name="bookmark-read" id="bookmark-button-read" value="Read">
-        </label>
+        <input type="button" name="bookmark-read" id="bookmark-button-read" value="Read">
 
-        <label for="bookmark-button-delete">
-          <input type="button" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
-        </label>
+        <input type="button" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
       </article>
 
     </section>
 
-    <script type="text/javascript" src="script.js"/>
+    <script type="text/javascript" src="scripts/myScripts.js"></script>
   </body>
 
 </html>
