Updated aria labels on inputs

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
 
-        <input type="url" name="input-url" id="input-website-url" placeholder="Website URL">
+        <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL">
 
-        <input type="button" name="input-submit" id="input-submit-bookmark" value="Enter">
+        <input type="button" aria-label="input to submit new bookmark" name="input-submit" id="input-submit-bookmark" value="Enter">
 
       </div>
     </section>
@@ -40,9 +40,9 @@
 
         <hr class="bookmark-underline">
 
-        <input type="button" name="bookmark-read" id="bookmark-button-read" value="Read">
+        <input type="button" aria-label="mark bookmark card read" name="bookmark-read" id="bookmark-button-read" value="Read">
 
-        <input type="button" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
+        <input type="button" aria-label="delete bookmark card" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
       </article>
 
     </section>
