Create and append JS elements in section 2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
 
-        <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL">
+        <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL" value="http://">
 
         <input type="button" aria-label="input to submit new bookmark" name="input-submit" id="input-submit-bookmark" value="Enter">
 
@@ -31,7 +31,7 @@
 
     <section id="user-display">
 
-      <article class="bookmark-card">
+      <!--<article class="bookmark-card">
         <h3 class="bookmark-title">The Website Title</h3>
 
         <hr class="bookmark-underline">
@@ -43,7 +43,7 @@
         <input type="button" aria-label="mark bookmark card read" name="bookmark-read" id="bookmark-button-read" value="Read">
 
         <input type="button" aria-label="delete bookmark card" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
-      </article>
+      </article>-->
 
     </section>
 
