--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta charset="utf-8">
     <title>Linked List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Stylesheets & Font -->
     <link rel="stylesheet" type="text/css" href="styles/normalize.css">
     <link rel="stylesheet" type="text/css" href="styles/myStyles.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+
+      <!-- JQuery Library -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
+
   </head>
 
   <body>
