--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       <!-- JQuery Library -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="path/to/your/jquery.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="scripts/jquery-3.2.1.min.js"><\/script>')</script>
 
   </head>
 
