Finish phase 3 in JavaScript

--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
 
         <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
 
-        <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL" value="http://">
+        <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL">
 
         <input type="button" aria-label="input to submit new bookmark" name="input-submit" id="input-submit-bookmark" value="Enter">
-
       </div>
+
+        <section class="bookmark-counters">
+          <p id="total-added">No bookmarks added</p>
+          <p id="total-read">No read bookmarks</p>
+          <p id="total-unread">No unread bookmarks</p>
+        </section>
     </section>
 
     <section id="user-display">
