cleaning up code format

--- a/index.html
+++ b/index.html
@@ -20,44 +20,23 @@
   <body>
     <section id="user-input">
       <div id="input-wrapper">
-
         <p role="banner">
           Linked
           <img src="linked-list-logo.svg" alt="linked list logo">
           List
         </p>
-
         <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
-
         <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL">
-
         <input type="button" aria-label="input to submit new bookmark" name="input-submit" id="input-submit-bookmark" value="Enter">
       </div>
-
-        <section class="bookmark-counters">
-          <p id="total-added">No bookmarks added</p>
-          <p id="total-read">No read bookmarks</p>
-          <p id="total-unread">No unread bookmarks</p>
-        </section>
+      <section class="bookmark-counters">
+        <p id="total-added">No bookmarks added</p>
+        <p id="total-read">No read bookmarks</p>
+        <p id="total-unread">No unread bookmarks</p>
+      </section>
     </section>
 
-    <section id="user-display">
-
-      <!--<article class="bookmark-card">
-        <h3 class="bookmark-title">The Website Title</h3>
-
-        <hr class="bookmark-underline">
-
-        <a class="bookmark-link" href="#" target="_blank">www.thewebsiteurl.com</a>
-
-        <hr class="bookmark-underline">
-
-        <input type="button" aria-label="mark bookmark card read" name="bookmark-read" id="bookmark-button-read" value="Read">
-
-        <input type="button" aria-label="delete bookmark card" name="bookmark-delete" id="bookmark-button-delete" value="Delete">
-      </article>-->
-
-    </section>
+    <section id="user-display"></section>
 
     <script type="text/javascript" src="scripts/myScripts.js"></script>
   </body>
