formatting and misc sync up with master

--- a/index.html
+++ b/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Linked List</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <title>Linked List</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Stylesheets & Font -->
-    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="styles/myStyles.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  <!-- Stylesheets & Font -->
+  <link rel="stylesheet" type="text/css" href="styles/normalize.css">
+  <link rel="stylesheet" type="text/css" href="styles/myStyles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
 
-      <!-- JQuery Library -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/jquery-3.2.1.min.js"><\/script>')</script>
+  <!-- JQuery Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="/jquery-3.2.1.min.js"><\/script>')</script>
 
-  </head>
+</head>
 
-  <body>
-    <section id="user-input">
-      <div id="input-wrapper">
-        <p role="banner">
-          Linked
-          <img src="linked-list-logo.svg" alt="linked list logo">
-          List
-        </p>
-        <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
-        <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL">
-        <input type="button" aria-label="input to submit new bookmark" name="input-submit" id="input-submit-bookmark" value="Enter">
-      </div>
-      <section class="bookmark-counters">
-        <p id="total-added">No bookmarks added</p>
-        <p id="total-read">No read bookmarks</p>
-        <p id="total-unread">No unread bookmarks</p>
-      </section>
+<body>
+  <section id="user-input">
+    <div id="input-wrapper">
+      <p role="banner">
+        Linked
+        <img src="linked-list-logo.svg" alt="linked list logo"> List
+      </p>
+      <input type="text" aria-label="input for website title" name="input-title" id="input-website-title" placeholder="Website Title">
+      <input type="url" aria-label="input for website url" name="input-url" id="input-website-url" placeholder="Website URL">
+      <input type="button" aria-label="input to submit new bookmark" name="input-submit" id="input-submit-bookmark" value="Enter">
+    </div>
+    <section class="bookmark-counters">
+      <p id="total-added">No bookmarks added</p>
+      <p id="total-read">No read bookmarks</p>
+      <p id="total-unread">No unread bookmarks</p>
     </section>
+  </section>
 
-    <section id="user-display"></section>
+  <section id="user-display"></section>
 
-    <script type="text/javascript" src="scripts/myScripts.js"></script>
-  </body>
+  <script type="text/javascript" src="scripts/myScripts.js"></script>
+</body>
 
 </html>
